// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fileInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
        style="--uv_1o893js0: 100%;"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <label
            class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8l uv_1yhcak81a uv_1yhcak832"
            for="_r_0_"
          >
            Test
          </label>
          <input
            class="uv_1nq88e9"
            id="_r_0_"
            name="Test"
            type="file"
          />
          <div
            class="uv_1nq88e0 uv_1nq88e2 uv_1nq88e4"
            data-testid="drag-container"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzh uv_icons_1sbwqkz1g"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <title>
                UploadIcon
              </title>
              <path
                d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
              />
              <path
                d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
            <div
              class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak816 uv_1yhcak81a uv_1yhcak832"
              style="--uv_1eu8od80: left;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly as an overlay 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <div
          data-testid="drag-container"
        >
          <input
            aria-label="Test"
            class="uv_1nq88e9"
            id="_r_c_"
            name="test"
            type="file"
          />
          <div
            class="uv_1nq88ec"
          >
            overlay
            <div
              class="uv_1nq88ee uv_1nq88ed"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
        style="--uv_1o893js0: 100%;"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <label
            class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8l uv_1yhcak81a uv_1yhcak832"
            for="_r_6_"
          >
            Test
          </label>
          <div
            class="uv_1nq88e0 uv_1nq88e1 uv_1nq88e2 uv_1nq88e4"
            data-testid="drag-container"
            disabled=""
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzh uv_icons_1sbwqkzk"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <title>
                UploadIcon
              </title>
              <path
                d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
              />
              <path
                d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
            <div
              class="uv_1yhcak80 uv_1yhcak81 uv_1yhcak84 uv_1yhcak8b uv_1yhcak816 uv_1yhcak822"
              style="--uv_1eu8od80: left;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should use provided id prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
        style="--uv_1o893js0: 100%;"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir935j"
        >
          <label
            class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8l uv_1yhcak81a uv_1yhcak832"
            for="custom-file-input-field-id"
          >
            Test files
          </label>
          <input
            class="uv_1nq88e9"
            id="custom-file-input-field-id"
            name="Test files"
            type="file"
          />
          <div
            class="uv_1nq88e0 uv_1nq88e2 uv_1nq88e4"
            data-testid="drag-container"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzh uv_icons_1sbwqkz1g"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <title>
                UploadIcon
              </title>
              <path
                d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
              />
              <path
                d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
            <div
              class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak816 uv_1yhcak81a uv_1yhcak832"
              style="--uv_1eu8od80: left;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
